--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "prettier"
   ],
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
@@ -57,6 +60,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.0.0",
+    "firebase-admin": "^12.1.1",
     "helmet": "^4.1.0",
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
@@ -70,6 +74,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "redis": "^4.6.14",
     "socket.io": "^4.5.1",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
